== 0.8.0

* Enhancements
  * Mailing Changes:
    * Imports using Subject Codes instead of MRNs available
    * Imports now require the doctor type to be specified

== 0.7.10

* Bug Fix
  * Removed quiet_assets code as it was causing issues with Rails 3.2.6

== 0.7.9

* Enhancements
  * CSV Exports added for:
    * Calls: Patient ID, Subject Code, Call Time, Call Type, Response, Participation, Exclusion, Berlin, ESS, Eligibility, Direction, Comments
    * Mailings: Patient ID, Subject Code, Sent Date, Response Date, Berlin, ESS, Eligibility, Participation, Exclusion, Comments
    * Evaluations: Patient ID, Subject Code, Administration Type, Evaluation Type, Source, Administration Date, Receipt Date, Scored Date, AHI, Eligibility, Exclusion, Status, Comments
    * Visits: Patient ID, Subject Code, Visit Type, Visit Date, Outcome, Comments
  * Mailings can be filtered by response date
  * Evaluations can be filtered by receipt date, scored date, administration type, and evaluation type
  * Data dictionary export updated to include majority of models

== 0.7.8

* Enhancements
  * Update to Rails 3.2.6 and Contour 1.0.2
  * Links with confirm: now use data: { confirm: } to account for deprecations in Rails 4.0

== 0.7.7

* Enhancements
  * Visits can be filtered by visit type
  * Searching by phone number now returns results for patients, prescreens, mailings, calls, evaluations, and visits
  * Mailing comments are now displayed in the participant timeline, consistent with other event types
  * Creator of an event is now displayed on the participant timeline in the event details
  * PHI Access role added to grant de-identified access to retrieve aggregate counts

* Bug Fix
  * User is now a required field for clinics, doctors, choices, patients, prescreens, mailings, calls, evaluations, and visits

== 0.7.6

* Enhancements
  * Update to Rails 3.2.5 and Contour 1.0.1
  * Use Ruby 1.9.3-p194

== 0.7.5

* Bug Fix