@@ -1,5 +1,5 @@
 class UserMailer < ActionMailer::Base
-  default from: ActionMailer::Base.smtp_settings[:user_name]
+  default from: "#{DEFAULT_APP_NAME} <#{ActionMailer::Base.smtp_settings[:user_name]}>"
   add_template_helper(ApplicationHelper)
 
   def notify_system_admin(system_admin, user)
@@ -7,7 +7,7 @@ class UserMailer < ActionMailer::Base
     @system_admin = system_admin
     @user = user
     mail(to: system_admin.email,
-         subject: @subject + "#{user.name} Signed Up",
+         subject: "#{user.name} Signed Up",
          reply_to: user.email)
   end
 
@@ -15,14 +15,13 @@ class UserMailer < ActionMailer::Base
     setup_email
     @user = user
     mail(to: user.email,
-         subject: @subject + "#{user.name}'s Account Activated") #,
+         subject: "#{user.name}'s Account Activated") #,
 #         reply_to: user.email)
   end
 
   protected
 
   def setup_email
-    @subject = "[#{DEFAULT_APP_NAME.downcase}#{'-development' if Rails.env == 'development'}] "
     @footer_html = "Change email settings here: <a href=\"#{SITE_URL}/settings\">#{SITE_URL}/settings</a>.<br /><br />".html_safe
     @footer_txt = "Change email settings here: #{SITE_URL}/settings."
   end
