@@ -12,7 +12,7 @@ class UserMailerTest < ActionMailer::TestCase
 
     # Test the body of the sent email contains what we expect it to
     assert_equal [admin.email], email.to
-    assert_equal "[#{DEFAULT_APP_NAME.downcase}] #{valid.name} Signed Up", email.subject
+    assert_equal "#{valid.name} Signed Up", email.subject
     assert_match(/#{valid.name} \[#{valid.email}\] has signed up for an account\./, email.encoded)
   end
 
@@ -25,7 +25,7 @@ class UserMailerTest < ActionMailer::TestCase
 
     # Test the body of the sent email contains what we expect it to
     assert_equal [valid.email], email.to
-    assert_equal "[#{DEFAULT_APP_NAME.downcase}] #{valid.name}'s Account Activated", email.subject
+    assert_equal "#{valid.name}'s Account Activated", email.subject
     assert_match(/Your account \[#{valid.email}\] has been activated\./, email.encoded)
   end
 
